--- a/src/App.css
+++ b/src/App.css
@@ -20,8 +20,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
+  /* font-size: calc(10px + 2vmin); */
 }
 
 .App-link {
@@ -35,4 +35,27 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.card {
+  margin: 0 auto;
+  float: none;
+  margin-bottom: 10px;
+  width: 18rem;
+}
+
+.card-title {
+  margin: -5px;
+}
+
+.input-group {
+  margin-bottom: 10px;
+}
+
+.input-group-text {
+  width: 100px;
+}
+
+.btn {
+  margin: 5px;
 }
