--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 93.3vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -32,6 +32,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
@@ -62,4 +63,22 @@
 
 .alert {
   font-size: 12px;
+}
+
+.navbar-brand {
+  font-family: "Bebas Neue", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 40px;
+  margin: 5px 25px -5px 5px;
+  color:#61dafb
+}
+
+li .nav-link {
+  font-size: 18px;
+  margin-right: 10px;
+}
+
+#fa-school {
+  margin-right: 15px;
 }
